# client-management-system

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ClientManager.spec  LICENSE  README.md  RELEASES.md  build_exe_hooks.py  build_nuitka.py  installer.iss  main.py  pyproject.toml  release_manager.py  requirements.txt  testdebug.py  version.py
.continue/rules/: agent.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: architect.agent.md  code-reviewer.agent.md  db-developer.agent.md  exe-builder.agent.md  perf-optimizer.agent.md  tester.agent.md  ui-developer.agent.md
.github/instructions/: database-rules.instructions.md  error-handling.instructions.md  gui-components.instructions.md  python-standards.instructions.md  theme-rules.instructions.md
.github/prompts/: add-field.prompt.md  add-tab.prompt.md  (+2 more)
config/: __init__.py  settings.py
database/: __init__.py  clients.py  core.py  matrices.py  models.py  search.py  statistics.py  utils.py
debugger/: __init__.py  window.py
gui/: __init__.py
gui_qt/: __init__.py  app.py  exporters.py  helpers.py  main_window.py  splash.py  theme.py  widgets.py
releases/: .gitignore  .gitkeep
tests/: conftest.py  test_database.py  test_exporters.py  test_models.py  test_search.py  test_statistics.py  test_validators.py
themes/: __init__.py  manager.py  theme_config.json
utils/: __init__.py  clipboard.py  date_parser.py  shortcuts.py  timer_manager.py  validators.py
widgets/: __init__.py  notifications.py  tooltip.py
(+95 files in other folders)
